tests/samples/valid/length_of_pointer_to_slice.pn
fn main() -> usize
{
	var buffer: [3]u8 = [20, 32, 0x00];
	var x: &[]u8 = &buffer;
	return: 197 + |x|
}
